Bug 126316 - [EDITING] Selecting text with the mouse automatically places the text in the clipboard
Summary: [EDITING] Selecting text with the mouse automatically places the text in the ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.3.0.1 rc
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Jan-Marek Glogowski
URL:
Whiteboard: target:6.4.0 target:6.3.0.2
Keywords:
: 126146 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-07-09 17:57 UTC by zigazou
Modified: 2019-07-17 12:58 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description zigazou 2019-07-09 17:57:48 UTC
Hi !

Selecting text automatically places it in the clipboard. To reproduce this bug :

- create an empty presentation
- in the title zone (works also in the content zone) type in "aaaa bbbb"
- using the mouse, select "bbbb" (by double-clicking or simply selecting text)
- type CTRL+C to copy the text in the clipboard
- using the mouse, select "aaaa"
- type CTRL+V to paste the text from the clipboard
- the "aaaa" word is replaced by "aaaa", not by "bbbb"

or
- create an empty presentation
- in the title zone (works also in the content zone) type in "bbbb"
- using the mouse, select "bbbb" (by double-clicking or simply selecting text)
- place the cursor after the word "bbbb"
- type CTRL+V
- the "bbbb" word is appended to the line.
Comment 1 zigazou 2019-07-09 17:58:37 UTC
This behaviour appeared in the 6.3.0.1 RC, it is not exhibited in the 6.2.5.2 release.
Comment 2 Jan-Marek Glogowski 2019-07-09 20:26:45 UTC
Regression from 

commit ce9795954d3957e98d24bf711869efd846df6f15
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Tue Jun 18 14:04:27 2019 +0100

    fix crash in header/footer calc dialog
    
    cut and paste can happen when the EditView isn't in a vcl::Window

That replaced some GetPrimarySelection() with GetClipboard().
Comment 3 Commit Notification 2019-07-10 15:52:54 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/f8f43e55ec4ae7e436a5043fe6f4bae7b39cc6ad%5E%21

tdf#126316 revert Clipboard to PrimarySelection

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2019-07-15 13:46:34 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/+/afadb14164ccd559a36f00efa0f01bac1813bc0e%5E%21

tdf#126316 revert Clipboard to PrimarySelection

It will be available in 6.3.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Buovjaga 2019-07-17 12:58:00 UTC
*** Bug 126146 has been marked as a duplicate of this bug. ***