tdf#126316 revert Clipboard to PrimarySelection

Regression from commit ce9795954d39 ("fix crash in header/footer
calc dialog"), which replaced some GetPrimarySelection() calls
with GetClipboard() calls.

This replaces the Window class calls for clipboard with global
GetSystem* calls in vcl/transfer.hxx. Not sure if this is the
best place, but the crowded Window class is definitly not.

Change-Id: Ic5f9e575c1ac5d43df234426c5616eca616dea30